Fixed scrollbar issue

--- a/front-end/library-system-client/src/app/components/books/all-books-preview/all-books-preview.component.css
+++ b/front-end/library-system-client/src/app/components/books/all-books-preview/all-books-preview.component.css
@@ -10,6 +10,7 @@
   margin-top: 20px;
   margin-bottom: 10px;
   font-style: italic;
+  text-align: center;
 }
 
 ::-webkit-scrollbar {
